ditto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ditto-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
    - http:
        paths:
          - path: /dicom-web
            pathType: ImplementationSpecific
            backend:
              service:
                name: raccoon-service
                port:
                  number: 8081
